--- a/IKEA/appsettings.json
+++ b/IKEA/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=.;Initial Catalog=IKEA;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+    }
 }
